# fmbench

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  run.py
cases/: constraints.jsonl  extraction.jsonl  failure_modes.jsonl  routing.jsonl
docs/: index.html  results.json
examples/: vision_tracers.py
fmbench/: __init__.py  ane.py  biggen.py  grading.py  perf.py  reflect.py  report.py  runner.py  schemas.py
